[gd_scene load_steps=11 format=3 uid="uid://gpg2x1kp0rym"]

[ext_resource type="Texture2D" uid="uid://cremcyr0wk4o4" path="res://assets/scenery/overhead_tileset/overhead_tileset.png" id="1_032gh"]
[ext_resource type="PackedScene" uid="uid://dhyortiju50o7" path="res://scenes/dale_scenes/dale_overhead.tscn" id="2_2fkr5"]
[ext_resource type="Script" path="res://scripts/environment_scripts/overworld.gd" id="2_xbpe1"]
[ext_resource type="Texture2D" uid="uid://c4c0h43moijfe" path="res://assets/ui_assets/interact_graphic.png" id="4_ywmym"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_35yel"]
texture = ExtResource("1_032gh")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-17.25, -15, 17.25, -11.5, -27.25, 18.5)
3:4/0/physics_layer_0/polygon_1/points = PackedVector2Array(27.25, 15.5, 17.75, -10, 17.75, -10, -23.75, 16.5, -23.25, 16.5)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.75, -6, 13.75, -0.5, -5.75, 9.5)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.25, -12, 15.25, -11, 32, 14.5, -32, 17.5)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.25, -12, 19.25, -12, 27.75, 14.5, -32, 9.5)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_o7smt"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_35yel")

[sub_resource type="CircleShape2D" id="CircleShape2D_jummv"]
radius = 37.1214

[sub_resource type="Animation" id="Animation_nlqtw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h7ecd"]
resource_name = "interact"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfr8r"]
_data = {
"RESET": SubResource("Animation_nlqtw"),
"interact": SubResource("Animation_h7ecd")
}

[node name="overworld" type="TileMap"]
tile_set = SubResource("TileSet_o7smt")
format = 2
layer_0/tile_data = PackedInt32Array(0, 262145, 1, 65536, 262145, 1, 131072, 262145, 1, 196608, 262145, 1, 262144, 262145, 1, 327680, 262145, 1, 393216, 262145, 1, 458752, 262145, 1, 524288, 262145, 1, 589824, 262145, 1, 655360, 262145, 1, 1, 262145, 1, 65537, 262145, 1, 131073, 262145, 1, 196609, 262145, 1, 262145, 262145, 1, 327681, 262145, 1, 393217, 262145, 1, 458753, 262145, 1, 524289, 65537, 0, 589825, 65537, 1, 655361, 65537, 2, 2, 262145, 1, 65538, 262145, 1, 131074, 262145, 1, 196610, 262145, 1, 262146, 262145, 1, 327682, 65537, 4, 393218, 262145, 1, 458754, 262145, 1, 524290, 131073, 0, 589826, 131073, 1, 655362, 131073, 2, 3, 262145, 1, 65539, 262145, 1, 131075, 262145, 1, 196611, 262145, 1, 262147, 262145, 1, 327683, 262145, 1, 393219, 262145, 1, 458755, 262145, 1, 524291, 131073, 0, 589827, 131073, 1, 655363, 131073, 2, 4, 131073, 4, 65540, 262145, 1, 131076, 262145, 1, 196612, 262145, 1, 262148, 65537, 0, 327684, 65537, 1, 393220, 65537, 2, 458756, 262145, 1, 524292, 131073, 0, 589828, 131073, 1, 655364, 131073, 2, 5, 262145, 1, 65541, 262145, 1, 131077, 262145, 1, 196613, 262145, 1, 262149, 131073, 0, 327685, 131073, 1, 393221, 131073, 2, 458757, 262145, 1, 524293, 131073, 0, 589829, 131073, 1, 655365, 131073, 2, 6, 262145, 1, 65542, 262145, 1, 131078, 262145, 1, 196614, 262145, 1, 262150, 131073, 0, 327686, 131073, 1, 393222, 131073, 2, 458758, 262145, 1, 524294, 196609, 0, 589830, 196609, 1, 655366, 196609, 2, 7, 262145, 1, 65543, 65537, 0, 131079, 65537, 2, 196615, 262145, 1, 262151, 131073, 0, 327687, 131073, 1, 393223, 131073, 2, 458759, 262145, 1, 524295, 262145, 1, 589831, 262145, 1, 655367, 262145, 1, 8, 262145, 1, 65544, 131073, 0, 131080, 131073, 2, 196616, 262145, 1, 262152, 131073, 0, 327688, 131073, 1, 393224, 131073, 2, 458760, 262145, 1, 524296, 262145, 1, 589832, 262145, 1, 655368, 262145, 1, 9, 262145, 1, 65545, 131073, 0, 131081, 131073, 2, 196617, 262145, 1, 262153, 131073, 0, 327689, 131073, 1, 393225, 131073, 2, 458761, 262145, 1, 524297, 262145, 1, 589833, 262145, 1, 655369, 262145, 1, 10, 262145, 1, 65546, 131073, 0, 131082, 131073, 2, 196618, 262145, 1, 262154, 131073, 0, 327690, 131073, 1, 393226, 131073, 2, 458762, 262145, 1, 524298, 262145, 1, 589834, 262145, 1, 655370, 262145, 1, 11, 262145, 1, 65547, 196609, 0, 131083, 196609, 2, 196619, 262145, 1, 262155, 131073, 0, 327691, 131073, 1, 393227, 131073, 2, 458763, 262145, 1, 524299, 262145, 1, 589835, 262145, 1, 655371, 262145, 1, 12, 262145, 1, 65548, 262145, 1, 131084, 262145, 1, 196620, 262145, 1, 262156, 131073, 0, 327692, 131073, 1, 393228, 131073, 2, 458764, 262145, 1, 524300, 262145, 1, 589836, 262145, 1, 655372, 262145, 1, 13, 1, 4, 65549, 262145, 1, 131085, 262145, 1, 196621, 262145, 1, 262157, 131073, 0, 327693, 131073, 1, 393229, 131073, 2, 458765, 262145, 1, 524301, 262145, 1, 589837, 1, 4, 655373, 262145, 1, 14, 262145, 1, 65550, 262145, 1, 131086, 262145, 1, 196622, 262145, 1, 262158, 131073, 0, 327694, 131073, 1, 393230, 131073, 2, 458766, 262145, 1, 524302, 262145, 1, 589838, 262145, 1, 655374, 262145, 1, 15, 262145, 1, 65551, 262145, 1, 131087, 262145, 1, 196623, 262145, 1, 262159, 196609, 0, 327695, 196609, 1, 393231, 196609, 2, 458767, 262145, 1, 524303, 262145, 1, 589839, 262145, 1, 655375, 262145, 1, 16, 262145, 1, 65552, 65537, 0, 131088, 65537, 1, 196624, 65537, 2, 262160, 262145, 1, 327696, 196609, 4, 393232, 262145, 1, 458768, 65537, 0, 524304, 65537, 1, 589840, 65537, 1, 655376, 65537, 2, 17, 262145, 1, 65553, 131073, 0, 131089, 131073, 1, 196625, 131073, 2, 262161, 262145, 1, 327697, 262145, 1, 393233, 262145, 1, 458769, 131073, 0, 524305, 131073, 1, 589841, 131073, 1, 655377, 131073, 2, 18, 262145, 1, 65554, 196609, 0, 131090, 196609, 1, 196626, 196609, 2, 262162, 262145, 1, 327698, 262145, 1, 393234, 262145, 1, 458770, 196609, 0, 524306, 196609, 1, 589842, 196609, 1, 655378, 196609, 2, 19, 262145, 1, 65555, 262145, 1, 131091, 262145, 1, 196627, 262145, 1, 262163, 262145, 1, 327699, 262145, 1, 393235, 262145, 1, 458771, 262145, 1, 524307, 262145, 1, 589843, 262145, 1, 655379, 262145, 1, -65536, 1, 3, -65535, 65537, 3, -65534, 131073, 3, -65533, 196609, 3, -65522, 1, 3, -65521, 65537, 3, -65520, 131073, 3, -65519, 196609, 3, -65530, 1, 3, -65529, 65537, 3, -65528, 131073, 3, -65527, 196609, 3, -65532, 65537, 3, -65517, 65537, 3, -65531, 1, 3, -65523, 196609, 3, -65525, 196609, 3, -65518, 1, 3, -65524, 1, 3, -65526, 131073, 3, -1, 65537, 3, 720895, 65537, 3, 393215, 65537, 3, 196607, 65537, 3, 524287, 131073, 3, 655359, 131073, 3, 262143, 131073, 3, 65535, 1, 3, 458751, 1, 3, 589823, 1, 3, 131071, 196609, 3, 327679, 196609, 3, 720896, 1, 3, 720897, 65537, 3, 720898, 131073, 3, 720899, 196609, 3, 720901, 1, 3, 720902, 65537, 3, 720903, 131073, 3, 720904, 196609, 3, 720912, 1, 3, 720913, 65537, 3, 720914, 131073, 3, 720915, 196609, 3, 720908, 1, 3, 720909, 65537, 3, 720910, 131073, 3, 720911, 196609, 3, 720905, 131073, 3, 720907, 131073, 3, 720906, 196609, 3, 720900, 131073, 3, 786431, 131073, 3, -65516, 131073, 3, 655380, 131073, 3, 458772, 131073, 3, 262164, 131073, 3, 131092, 131073, 3, 524308, 196609, 3, 20, 196609, 3, 196628, 196609, 3, 720916, 1, 3, 589844, 1, 3, 393236, 65537, 3, 65556, 65537, 3, 327700, 1, 3, -65538, 1, 3, -65537, 65537, 3, -131072, 131073, 3, -131071, 196609, 3, -131075, 1, 3, -131074, 65537, 3, -131073, 131073, 3, -196608, 196609, 3, -196605, 1, 3, -196604, 65537, 3, -196603, 131073, 3, -196602, 196609, 3, -196599, 1, 3, -196598, 65537, 3, -196597, 131073, 3, -196596, 196609, 3, -131069, 1, 3, -131068, 65537, 3, -131067, 131073, 3, -131066, 196609, 3, -131065, 1, 3, -131064, 65537, 3, -131063, 131073, 3, -131062, 196609, 3, -131054, 1, 3, -131053, 65537, 3, -131052, 131073, 3, -131051, 196609, 3, -196589, 1, 3, -196588, 65537, 3, -196587, 131073, 3, -196586, 196609, 3, -196594, 1, 3, -196593, 65537, 3, -196592, 131073, 3, -196591, 196609, 3, -131059, 1, 3, -131058, 65537, 3, -131057, 131073, 3, -131056, 196609, 3, 851969, 1, 3, 851970, 65537, 3, 851971, 131073, 3, 851972, 196609, 3, 786435, 1, 3, 786436, 65537, 3, 786437, 131073, 3, 786438, 196609, 3, 786440, 1, 3, 786441, 65537, 3, 786442, 131073, 3, 786443, 196609, 3, 786446, 1, 3, 786447, 65537, 3, 786448, 131073, 3, 786449, 196609, 3, 786450, 1, 3, 786451, 65537, 3, 786452, 131073, 3, 786453, 196609, 3, 851987, 1, 3, 851988, 65537, 3, 851989, 131073, 3, 851990, 196609, 3, 851974, 1, 3, 851975, 65537, 3, 851976, 131073, 3, 851977, 196609, 3, 851978, 1, 3, 851979, 65537, 3, 851980, 131073, 3, 851981, 196609, 3, 851983, 1, 3, 851984, 65537, 3, 851985, 131073, 3, 851986, 196609, 3, 65533, 1, 3, 393213, 1, 3, 196605, 1, 3, 917501, 1, 3, 655357, 1, 3, 786430, 1, 3, 262142, 1, 3, -196606, 1, 3, -196600, 1, 3, -196595, 1, 3, -196590, 1, 3, 262165, 1, 3, 131094, 1, 3, -65514, 1, 3, 393238, 1, 3, 655382, 1, 3, 786454, 1, 3, 524309, 1, 3, 720917, 1, 3, 65557, 1, 3, -131055, 65537, 3, -131060, 65537, 3, -196601, 65537, 3, -196607, 65537, 3, -131070, 65537, 3, 786432, 65537, 3, 786434, 65537, 3, 851973, 65537, 3, 786439, 65537, 3, 786444, 65537, 3, 851982, 65537, 3, 720918, 65537, 3, 589845, 65537, 3, 458774, 65537, 3, 458773, 65537, 3, 327701, 65537, 3, 196630, 65537, 3, 131093, 65537, 3, -131050, 65537, 3, -65515, 65537, 3, 65558, 65537, 3, 524310, 65537, 3, 524286, 65537, 3, 393214, 65537, 3, 655358, 65537, 3, 851965, 65537, 3, 917503, 65537, 3, -3, 65537, 3, 131070, 65537, 3, 327677, 65537, 3, 589821, 65537, 3, 786429, 131073, 3, -65539, 131073, 3, -2, 131073, 3, 262166, 196609, 3, -131061, 1, 3, 196629, 1, 3, 21, 1, 3, 65534, 196609, 3, 131069, 196609, 3, 786433, 196609, 3, 786445, 196609, 3, 655381, 196609, 3, 589846, 196609, 3, 393237, 196609, 3, 327702, 131073, 3, 22, 131073, 3, 196606, 131073, 3, 262141, 131073, 3, 327678, 131073, 3, 458749, 131073, 3, 720893, 131073, 3, 851966, 131073, 3, 851968, 131073, 3, 851967, 1, 3, 917502, 196609, 3, 720894, 196609, 3, 458750, 196609, 3, 589822, 196609, 3, 524285, 1, 3)
script = ExtResource("2_xbpe1")

[node name="dale_overhead" parent="." instance=ExtResource("2_2fkr5")]
position = Vector2(868, 88)

[node name="VillageArea2D" type="Area2D" parent="."]
position = Vector2(168, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VillageArea2D"]
position = Vector2(-9, 0)
shape = SubResource("CircleShape2D_jummv")

[node name="Sprite2D" type="Sprite2D" parent="VillageArea2D/CollisionShape2D"]
visible = false
position = Vector2(46, -58)
texture = ExtResource("4_ywmym")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="VillageArea2D/CollisionShape2D"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rfr8r")
}

[node name="Enemy1Area2D" type="Area2D" parent="."]
position = Vector2(1061, 359)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy1Area2D"]
position = Vector2(-195, -330)
shape = SubResource("CircleShape2D_jummv")

[node name="Sprite2D" type="Sprite2D" parent="Enemy1Area2D/CollisionShape2D"]
visible = false
position = Vector2(46, -58)
texture = ExtResource("4_ywmym")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy1Area2D/CollisionShape2D"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rfr8r")
}

[node name="WitchHouseArea2D" type="Area2D" parent="."]
position = Vector2(483, 362)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WitchHouseArea2D"]
position = Vector2(-195, -330)
shape = SubResource("CircleShape2D_jummv")

[node name="Sprite2D" type="Sprite2D" parent="WitchHouseArea2D/CollisionShape2D"]
visible = false
position = Vector2(46, -58)
texture = ExtResource("4_ywmym")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="WitchHouseArea2D/CollisionShape2D"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rfr8r")
}

[node name="ArenaArea2D" type="Area2D" parent="."]
position = Vector2(1065, 945)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArenaArea2D"]
position = Vector2(-195, -330)
shape = SubResource("CircleShape2D_jummv")

[node name="Sprite2D" type="Sprite2D" parent="ArenaArea2D/CollisionShape2D"]
visible = false
position = Vector2(46, -58)
texture = ExtResource("4_ywmym")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArenaArea2D/CollisionShape2D"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rfr8r")
}

[node name="MountainArea2D" type="Area2D" parent="."]
position = Vector2(1066, 360)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MountainArea2D"]
position = Vector2(-9, 0)
shape = SubResource("CircleShape2D_jummv")

[node name="Sprite2D" type="Sprite2D" parent="MountainArea2D/CollisionShape2D"]
visible = false
position = Vector2(46, -58)
texture = ExtResource("4_ywmym")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="MountainArea2D/CollisionShape2D"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rfr8r")
}

[connection signal="body_entered" from="VillageArea2D" to="." method="_on_village_area_2d_body_entered"]
[connection signal="body_exited" from="VillageArea2D" to="." method="_on_village_area_2d_body_exited"]
[connection signal="body_entered" from="Enemy1Area2D" to="." method="_on_enemy_1_area_2d_body_entered"]
[connection signal="body_exited" from="Enemy1Area2D" to="." method="_on_enemy_1_area_2d_body_exited"]
[connection signal="body_entered" from="WitchHouseArea2D" to="." method="_on_witch_house_area_2d_body_entered"]
[connection signal="body_exited" from="WitchHouseArea2D" to="." method="_on_witch_house_area_2d_body_exited"]
[connection signal="body_entered" from="ArenaArea2D" to="." method="_on_arena_area_2d_body_entered"]
[connection signal="body_exited" from="ArenaArea2D" to="." method="_on_arena_area_2d_body_exited"]
[connection signal="body_entered" from="MountainArea2D" to="." method="_on_mountain_area_2d_body_entered"]
[connection signal="body_exited" from="MountainArea2D" to="." method="_on_mountain_area_2d_body_exited"]
